--- a/components/MainTiles/blogsGrid.module.scss
+++ b/components/MainTiles/blogsGrid.module.scss
@@ -45,5 +45,5 @@
 
 .favicon {
   vertical-align: top;
-  margin-right: 0.3rem;
+  margin-right: 0.5rem;
 }
